@@ -3080,7 +3080,6 @@ GEN     ellwp0(GEN w, GEN z, long flag, long prec);
 GEN     ellwpseries(GEN e, long v, long PRECDL);
 GEN     ellxn(GEN e, long n, long v);
 GEN     ellzeta(GEN om, GEN z, long prec);
-GEN     expIxy(GEN x, GEN y, long prec);
 int     oncurve(GEN e, GEN z);
 GEN     orderell(GEN e, GEN p);
 GEN     pointell(GEN e, GEN z, long prec);
@@ -5144,6 +5143,7 @@ GEN     dilog(GEN x, long prec);
 GEN     eint1(GEN x, long prec);
 GEN     expIPiR(GEN x, long prec);
 GEN     expIPiC(GEN z, long prec);
+GEN     expIxy(GEN x, GEN y, long prec);
 GEN     eta(GEN x, long prec);
 GEN     eta0(GEN x, long flag,long prec);
 GEN     gerfc(GEN x, long prec);
